--- a/neogProjects.html
+++ b/neogProjects.html
@@ -20,57 +20,70 @@
             </div>
             <div class="project-item-wrapper">
                 <div class="project-item">
-                    <h2>CLI Quiz about me</h2>
+                    <h2>M1 CLI Quiz about me</h2>
                     <p><i>Aug 2021</i></p>
                     <p>Answers are intentionally not what you expect</p>
-                    <a href="https://github.com/SaiArunesh/nc-m1" target="_blank" >Source Code</a>
-                    <a
-                        href="https://replit.com/@SaiArunesh/L01-EX15-print-the-final-score-to-the-user?embed=1&output=1" target="_blank" >
+                    <a href="https://github.com/SaiArunesh/nc-m1" target="_blank">Source Code</a>
+                    <a href="https://replit.com/@SaiArunesh/L01-EX15-print-the-final-score-to-the-user?embed=1&output=1"
+                        target="_blank">
                         Live
                     </a>
                 </div>
                 <div class="project-item">
-                    <h2>CLI Marvel Quiz</h2>
+                    <h2>M2 CLI Marvel Quiz</h2>
                     <p><i>Aug 2021</i></p>
                     <p>Answers are intentionally not what you expect</p>
-                    <a href="https://github.com/SaiArunesh/nc-m2" target="_blank" >Source Code</a>
-                    <a
-                        href="https://replit.com/@SaiArunesh/markTwo-phone-quiz?embed=1&output=1#index.js" target="_blank" >Live</a>
+                    <a href="https://github.com/SaiArunesh/nc-m2" target="_blank">Source Code</a>
+                    <a href="https://replit.com/@SaiArunesh/markTwo-phone-quiz?embed=1&output=1#index.js"
+                        target="_blank">Live</a>
                 </div>
                 <div class="project-item">
-                    <h2>Banana Translator</h2>
+                    <h2>M6 Banana Translator</h2>
                     <p><i>Aug 2021</i></p>
                     <p>Bellooooo</p>
-                    <a href="https://github.com/SaiArunesh/nc-m6-minion-speak" target="_blank" >Source Code</a>
-                    <a
-                        href="https://banana-translator-99.netlify.app/" target="_blank" >Live</a>
+                    <a href="https://github.com/SaiArunesh/nc-m6-minion-speak" target="_blank">Source Code</a>
+                    <a href="https://banana-translator-99.netlify.app/" target="_blank">Live</a>
                 </div>
                 <div class="project-item">
-                    <h2>Yoda Translator</h2>
+                    <h2>M7 Yoda Translator</h2>
                     <p><i>Aug 2021</i></p>
                     <p>With you, May the force be</p>
-                    <a href="https://github.com/SaiArunesh/nc-m7-yoda-speak" target="_blank" >Source Code</a>
-                    <a
-                        href="https://yoda-translator-99.netlify.app/" target="_blank" >Live</a>
+                    <a href="https://github.com/SaiArunesh/nc-m7-yoda-speak" target="_blank">Source Code</a>
+                    <a href="https://yoda-translator-99.netlify.app/" target="_blank">Live</a>
                 </div>
                 <div class="project-item">
-                    <h2>Game Recommendations App</h2>
+                    <h2>M8 Emoji Interpreter React App</h2>
+                    <p><i>Aug 2021</i></p>
+                    <p>Meme-ojis</p>
+                    <a href="https://github.com/SaiArunesh/nc-m8-emoji-interpreter" target="_blank">Source
+                        Code</a>
+                    <a href="https://emoji-interpreter-99.netlify.app/" target="_blank">Live</a>
+                </div>
+                <div class="project-item">
+                    <h2>M9 Game Recommendations App</h2>
                     <p><i>Aug 2021</i></p>
                     <p>Warning: Very cringe-y</p>
-                    <a href="https://github.com/SaiArunesh/nc-m9-game-recommendation-app" target="_blank" >Source Code</a>
-                    <a
-                        href="https://epic-y-games.netlify.app/" target="_blank" >Live</a>
+                    <a href="https://github.com/SaiArunesh/nc-m9-game-recommendation-app" target="_blank">Source
+                        Code</a>
+                    <a href="https://epic-y-games.netlify.app/" target="_blank">Live</a>
+                </div>
+                <div class="project-item">
+                    <h2>M10 Cash Register React App</h2>
+                    <p><i>Aug 2021</i></p>
+                    <p>very Jugaad way of doing. need to learn react</p>
+                    <a href="https://github.com/SaiArunesh/nc-m10-cash-register-react" target="_blank">Source Code</a>
+                    <a href="https://cash-register-react.netlify.app/" target="_blank">Live</a>
                 </div>
 
                 <div class="project-item">
-                    <h2>Cash Register React App</h2>
+                    <h2>M12 Know your Triangles App</h2>
                     <p><i>Aug 2021</i></p>
-                    <p>very Jugaad way of doing. need to learn react</p>
-                    <a href="https://github.com/SaiArunesh/nc-m10-cash-reegister-react" target="_blank" >Source Code</a>
-                    <a
-                        href="https://codesandbox.io/s/github/SaiArunesh/nc-m10-cash-reegister-react" target="_blank" >Live</a>
+                    <p>Do you know your Triangles?</p>
+                    <a href="https://github.com/SaiArunesh/nc-m12-triangle" target="_blank">Source Code</a>
+                    <a href="https://triangles-quizz.netlify.app/" target="_blank">Live</a>
                 </div>
-        </div>
+
+            </div>
     </section>
 
 </body>
