--- a/neogProjects.html
+++ b/neogProjects.html
@@ -76,11 +76,27 @@
                 </div>
 
                 <div class="project-item">
+                    <h2>M11 Is your Birthday lucky?</h2>
+                    <p><i>Aug 2021</i></p>
+                    <p>Lucky if your birthday is divisible by lucky number</p>
+                    <a href="https://github.com/SaiArunesh/nc-m11-lucky-birthday" target="_blank">Source Code</a>
+                    <a href="https://lucky-birthday-99.netlify.app/" target="_blank">Live</a>
+                </div>
+
+                <div class="project-item">
                     <h2>M12 Know your Triangles App</h2>
                     <p><i>Aug 2021</i></p>
                     <p>Do you know your Triangles?</p>
                     <a href="https://github.com/SaiArunesh/nc-m12-triangle" target="_blank">Source Code</a>
                     <a href="https://triangles-quizz.netlify.app/" target="_blank">Live</a>
+                </div>
+
+                <div class="project-item">
+                    <h2>M13 Is your Birthday a Palindrome?</h2>
+                    <p><i>Aug 2021</i></p>
+                    <p>Checks if your birthday is a palindrom or not in 6 different date formats</p>
+                    <a href="https://github.com/SaiArunesh/nc-m13-palindrome-birthday" target="_blank">Source Code</a>
+                    <a href="https://b-day-palindrome.netlify.app/" target="_blank">Live</a>
                 </div>
 
             </div>
