--- a/blogs.html
+++ b/blogs.html
@@ -15,19 +15,14 @@
     <section id="projects">
         <div class="projects">
             <div class="project-header" style="padding:20px">
-                <h1>Neog Level 0 Projects</h1>
+                <h1>Neog Level 0 Blogs</h1>
             </div>
             <div class="project-item-wrapper">
                 <div class="project-item">
-                    <h2>Blog 1</h2>
+                    <h2>M15 Has OnePlus settled?</h2>
                     <p><i>Aug 2021</i></p>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-                        of type and scrambled it to make a type specimen book. It has survived not only five centuries,
-                        but also the leap into electronic typesetting, remaining essentially unchanged. It was
-                        popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
-                        and more recently with desktop publishing software like Aldus PageMaker including versions of
-                        Lorem Ipsum.</p>
+                    <p>Talks about the merger of OnePlus and Oppo</p>
+                    <a href="https://medium.com/@vssaiarunesh/has-oneplus-settled-4b167a441f90">Link To Blog</a>
                 </div>
                 <div class="project-item">
                     <h2>Blog 2</h2>
