--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ ________________________________________________________________________________
         <li><a href="#about" class="nav-link">About</a></li>
         <li><a href="#resume" class="nav-link">Resume</a></li>
         <li><a href="#projects" class="nav-link">Projects</a></li>
-        <li><a href="/blogs.html" class="nav-link">Blogs</a></li>
+        <li><a href="./blogs.html" class="nav-link">Blogs</a></li>
         <li><a href="#contact" class="nav-link">Reach Out</a></li>
       </ul>
     </nav>
