added link to blog 2

--- a/blogs.html
+++ b/blogs.html
@@ -25,37 +25,12 @@
                     <a href="https://medium.com/@vssaiarunesh/has-oneplus-settled-4b167a441f90">Link To Blog</a>
                 </div>
                 <div class="project-item">
-                    <h2>Blog 2</h2>
+                    <h2>M15 How to share Smart Phone's VPN with other Devices?</h2>
                     <p><i>Aug 2021</i></p>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-                        of type and scrambled it to make a type specimen book. It has survived not only five centuries,
-                        but also the leap into electronic typesetting, remaining essentially unchanged. It was
-                        popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
-                        and more recently with desktop publishing software like Aldus PageMaker including versions of
-                        Lorem Ipsum.</p>
-                </div>
-                <div class="project-item">
-                    <h2>Blog 3</h2>
-                    <p><i>Aug 2021</i></p>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-                        of type and scrambled it to make a type specimen book. It has survived not only five centuries,
-                        but also the leap into electronic typesetting, remaining essentially unchanged. It was
-                        popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
-                        and more recently with desktop publishing software like Aldus PageMaker including versions of
-                        Lorem Ipsum.</p>
-                </div>
-                <div class="project-item">
-                    <h2>Blog 4</h2>
-                    <p><i>Aug 2021</i></p>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-                        of type and scrambled it to make a type specimen book. It has survived not only five centuries,
-                        but also the leap into electronic typesetting, remaining essentially unchanged. It was
-                        popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
-                        and more recently with desktop publishing software like Aldus PageMaker including versions of
-                        Lorem Ipsum.</p>
+                    <p>Walks through the steps of sharing VPN of any Android phone with Windows Devices</p>
+                    <a
+                        href="https://medium.com/@vssaiarunesh/use-your-android-phones-vpn-on-any-device-in-the-local-network-a529d0957a35">Link
+                        To Blog</a>
                 </div>
             </div>
     </section>
