--- a/neogProjects.html
+++ b/neogProjects.html
@@ -99,6 +99,14 @@
                     <a href="https://b-day-palindrome.netlify.app/" target="_blank">Live</a>
                 </div>
 
+                <div class="project-item">
+                    <h2>M14 Profit/Loss Calculator</h2>
+                    <p><i>Aug 2021</i></p>
+                    <p>Checks if you made a profit or loss on the investment</p>
+                    <a href="https://github.com/SaiArunesh/nc-m14-profit-loss" target="_blank">Source Code</a>
+                    <a href="https://profit-loss-stonks.netlify.app/" target="_blank">Live</a>
+                </div>
+
             </div>
     </section>
 
