--- a/neogProjects.html
+++ b/neogProjects.html
@@ -37,6 +37,28 @@
                     <a href="https://replit.com/@SaiArunesh/markTwo-phone-quiz?embed=1&output=1#index.js"
                         target="_blank">Live</a>
                 </div>
+
+                <div class="project-item">
+                    <h2>M3 Github Hosting</h2>
+                    <p><i>Aug 2021</i></p>
+                    <p>You can visit my gitgub to find my repos and hostings</p>
+                    <a href="https://github.com/SaiArunesh" target="_blank">Link to Github</a>
+                </div>
+
+                <div class="project-item">
+                    <h2>M4 Portfolio</h2>
+                    <p><i>Aug 2021</i></p>
+                    <p>You must have been redirected from it :-)</p>
+                    <a href="https://saiarunesh.github.io/portfolio/" target="_blank">Link to Portfolio</a>
+                </div>
+
+                <div class="project-item">
+                    <h2>M5 Blogs</h2>
+                    <p><i>Aug 2021</i></p>
+                    <p>You can find my blogs below :-)</p>
+                    <a href="https://saiarunesh.github.io/portfolio/blogs.html" target="_blank">Link to Blogs</a>
+                </div>
+
                 <div class="project-item">
                     <h2>M6 Banana Translator</h2>
                     <p><i>Aug 2021</i></p>
@@ -44,6 +66,7 @@
                     <a href="https://github.com/SaiArunesh/nc-m6-minion-speak" target="_blank">Source Code</a>
                     <a href="https://banana-translator-99.netlify.app/" target="_blank">Live</a>
                 </div>
+
                 <div class="project-item">
                     <h2>M7 Yoda Translator</h2>
                     <p><i>Aug 2021</i></p>
@@ -51,6 +74,7 @@
                     <a href="https://github.com/SaiArunesh/nc-m7-yoda-speak" target="_blank">Source Code</a>
                     <a href="https://yoda-translator-99.netlify.app/" target="_blank">Live</a>
                 </div>
+
                 <div class="project-item">
                     <h2>M8 Emoji Interpreter React App</h2>
                     <p><i>Aug 2021</i></p>
@@ -59,6 +83,7 @@
                         Code</a>
                     <a href="https://emoji-interpreter-99.netlify.app/" target="_blank">Live</a>
                 </div>
+
                 <div class="project-item">
                     <h2>M9 Game Recommendations App</h2>
                     <p><i>Aug 2021</i></p>
@@ -67,6 +92,7 @@
                         Code</a>
                     <a href="https://epic-y-games.netlify.app/" target="_blank">Live</a>
                 </div>
+
                 <div class="project-item">
                     <h2>M10 Cash Register React App</h2>
                     <p><i>Aug 2021</i></p>
@@ -105,6 +131,18 @@
                     <p>Checks if you made a profit or loss on the investment</p>
                     <a href="https://github.com/SaiArunesh/nc-m14-profit-loss" target="_blank">Source Code</a>
                     <a href="https://profit-loss-stonks.netlify.app/" target="_blank">Live</a>
+                </div>
+
+                <div class="project-item">
+                    <h2>M15 Blogs</h2>
+                    <p><i>Aug 2021</i></p>
+                    <p>You can find my blogs below :-)</p>
+                    <a href="https://medium.com/@vssaiarunesh/has-oneplus-settled-4b167a441f90" target="_blank">Has
+                        OnePlus settled?</a>
+                    <a href="https://medium.com/@vssaiarunesh/use-your-android-phones-vpn-on-any-device-in-the-local-network-a529d0957a35"
+                        target="_blank">Using phone's VPN on desktop?</a>
+
+
                 </div>
 
             </div>
