--- a/neogProjects.html
+++ b/neogProjects.html
@@ -41,7 +41,7 @@
                 <div class="project-item">
                     <h2>M3 Github Hosting</h2>
                     <p><i>Aug 2021</i></p>
-                    <p>You can visit my gitgub to find my repos and hostings</p>
+                    <p>You can visit my github to find my repos and hostings</p>
                     <a href="https://github.com/SaiArunesh" target="_blank">Link to Github</a>
                 </div>
 
