updated about, web dev sections

--- a/neogProjects.html
+++ b/neogProjects.html
@@ -16,7 +16,7 @@
     <section id="projects">
         <div class="projects">
             <div class="project-header" style="padding:20px">
-                <h1>Neog Level 0 Projects</h1>
+                <h1><a href="https://neog.camp/qualifier/point-system">Getting started Projects</a> </h1>
             </div>
             <div class="project-item-wrapper">
                 <div class="project-item">
