index.html is now dark themed

--- a/index.html
+++ b/index.html
@@ -83,10 +83,6 @@ ________________________________________________________________________________
             <div class="resume-title">
               <h1>Download Resume</h1>
             </div>
-            <img
-              src="https://icons.iconarchive.com/icons/dtafalonso/android-lollipop/256/Downloads-icon.png"
-              alt="Download-icon"
-            />
           </div>
         </secion>
       </a>
@@ -202,13 +198,15 @@ ________________________________________________________________________________
             <a href="https://www.linkedin.com/in/sai-arunesh/" target="_blank">
               <img
                 class="icon"
-                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSv1TRjzY8iaO307JPz_hy2EW8BB7xqzbR83w&usqp=CAU"
+                src="./assets/LinkedIn.png"
                 alt="https://www.linkedin.com/in/sai-arunesh"
               />
             </a>
+
+            
             <a href="https://twitter.com/sai_arunesh" target="_blank">
               <img
-                src="https://img.icons8.com/cotton/2x/twitter.png"
+                src="./assets/Twitter.png"
                 alt="https://twitter.com/sai_arunesh"
                 class="icon"
             /></a>
