fixed linkedin link

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ ________________________________________________________________________________
         <div class="also-wrap">
           <p>Also Reach out to me on</p>
           <div class="icon-wrapper">
-            <a href="https://www.linkedin.com/in/sai-arunesh/" target="_blank">
+            <a href="https://www.linkedin.com/in/saiarunesh/" target="_blank">
               <img
                 class="icon"
                 src="./assets/LinkedIn.png"
